--- a/tasks/install-ubuntu.yml
+++ b/tasks/install-ubuntu.yml
@@ -8,11 +8,13 @@
   apt_key:
     url: "{{ nvidia_driver_ubuntu_cuda_repo_gpgkey_url }}"
     id: "{{ nvidia_driver_ubuntu_cuda_repo_gpgkey_id }}"
+  when: airgap is defined and airgap == True
 
 - name: add repo
   apt_repository:
     repo: "deb {{ nvidia_driver_ubuntu_cuda_repo_baseurl }} /"
     update_cache: yes
+  when: airgap is defined and airgap == True
 
 - name: install driver packages
   apt:
