--- a/tasks/install-redhat.yml
+++ b/tasks/install-redhat.yml
@@ -5,7 +5,7 @@
     description: EPEL YUM repo
     baseurl: "{{ nvidia_driver_rhel_epel_repo_baseurl }}"
     gpgkey: "{{ nvidia_driver_rhel_epel_repo_gpgkey }}"
-  when: airgap is defined and airgap == True
+  when: airgap is not defined or airgap != True
 
 - name: install dependencies
   yum: name=dkms
@@ -16,7 +16,7 @@
     description: NVIDIA CUDA YUM Repo
     baseurl: "{{ nvidia_driver_rhel_cuda_repo_baseurl }}"
     gpgkey: "{{ nvidia_driver_rhel_cuda_repo_gpgkey }}"
-  when: airgap is defined and airgap == True
+  when: airgap is not defined or airgap != True
 
 - name: install driver packages
   yum:
